--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "sass-loader": "^8.0.0",
     "tailwindcss": "^1.2.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "css-loader": "^4.2.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.14.1",
+    "npm": "^6.14.8",
+    "webpack": "^4.44.1"
   }
 }
